feat(url):update get url func
